# bibliotecaArvoresDeDecisao

./: README.md  pyproject.toml  setup.py
mytrees/: __init__.py  tree.py
